vlib/v/checker/tests/casting_numbers_to_enums_outside_unsafe_err.vv
enum Abc {
	a
	b
	c
}

a := Abc(1)
println(a)
